# ats-smart-contract

./: .gitignore  .tarpaulin.toml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  service.datadog.yaml
.github/: CODEOWNERS
.github/workflows/: rust.yaml  test.yaml
examples/: schema.rs
profiler/: Cargo.toml  README.md  setup.sh
profiler/src/: constants.rs  error.rs  execute.rs  extension.rs  instantiate.rs  main.rs  provenanced.rs  query.rs
schema/: ask_order.json  ask_order_class.json  ask_order_status.json  ask_order_v1.json  bid_order.json  bid_order_v1.json  bid_order_v2.json  bid_order_v3.json  contract_info.json  contract_info_v1.json  contract_info_v2.json  contract_info_v3.json  enum_migrate_msg.json  execute_msg.json  instantiate_msg.json  modify_contract_msg.json  query_msg.json  version_info_v1.json
scripts/: test_ats.sh
src/: ask_order.rs  bid_order.rs  common.rs  contract.rs  contract_info.rs  error.rs  execute.rs  lib.rs  msg.rs  state.rs  tests.rs  util.rs  version_info.rs
src/execute/: modify_contract.rs
src/tests/: execute.rs  instantiate.rs  migrate.rs  query.rs  test_constants.rs  test_setup_utils.rs  test_utils.rs
src/tests/execute/: approve_ask_tests.rs  cancel_ask_tests.rs  cancel_bid_tests.rs  create_ask_tests.rs  create_bid_tests.rs  execute_match_tests.rs  execute_modify_tests.rs  expire_ask_tests.rs  expire_bid_tests.rs  reject_ask_tests.rs  reject_bid_tests.rs
src/tests/instantiate/: instantiate_tests.rs
src/tests/migrate/: migrate_storage_tests.rs
src/tests/query/: get_ask_tests.rs  get_bid_tests.rs
