[package]
name = "ats-smart-contract"
version = "0.15.0"
authors = ["Ken Talley <ktalley@figure.com>"]
edition = "2018"

exclude = [
  "ats_smart_contract.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.14.1" }
cosmwasm-storage = { version = "0.14.1" }
cw-storage-plus = { version = "0.6.0" }
provwasm-std = { version = "0.14.1" }
rust_decimal = { version = "1.12.2" }
schemars = "0.8.1"
semver = "1.0.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "1.0.64"
thiserror = { version = "1.0.23" }
uuid = { version= "0.8.2" }

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0" }
provwasm-mocks = { version = "0.14.0" }
