[package]
name = "ats-smart-contract"
version = "0.17.2"
authors = ["Ken Talley <ktalley@figure.com>"]
edition = "2018"

exclude = [
  "ats_smart_contract.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta5" }
cosmwasm-storage = { version = "1.0.0-beta5", features = ["iterator"] }
cw-storage-plus = { version = "0.12.1" }
provwasm-std = { version = "1.0.0-beta2" }
rust_decimal = { version = "1.14" }
schemars = "0.8.1"
semver = "1.0.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
serde_json = "1.0.64"
thiserror = { version = "1.0.23" }
uuid = { version= "0.8.2" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta5" }
provwasm-mocks = { version = "1.0.0-beta2" }
