[package]
name = "ats-smart-contract"
version = "0.19.1"
authors = ["Ken Talley <ktalley@figure.com>"]
edition = "2018"

exclude = [
  "ats_smart_contract.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.2.6" }
cosmwasm-storage = { version = "1.2.6", features = ["iterator"] }
cw-storage-plus = { version = "1.0.1" }
provwasm-std = { version = "2.0.0-rc1" }
rust_decimal = "1.29.0"
schemars = "0.8.11"
semver = "1.0.16"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
serde_json = "1.0.91"
thiserror = { version = "1.0.38" }
uuid = { version = "1.3.3" }

[dev-dependencies]
cosmwasm-schema = { version = "1.2.6" }
provwasm-mocks = { version = "2.0.0-rc1" }
