[package]
name = "ats-profiler"
authors = ["mwoods@figure.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["env"] }
colored = "2.0.0"
cosm-orc = "4.0.1"
hex = "0.4.3"
lazy_static = "1.4.0"
os_pipe = { version = "1.1.2", features = ["io_safety"] }
rand = "0.8.5"
serde = "1.0.159"
serde_json = "1.0.95"
thiserror = "1.0.40"
uuid = { version = "1.3.0", features = ["v4"] }
